--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,38 +1,37 @@
 name: CI/CD Pipeline
 
 on:
-    push:
-        branches:
-            - main
-    pull_request:
-            branches:
-                - main
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-    test: 
-        runs-on: ubuntu-latest
+  test:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-            - name: Set up Docker Compose
-              uses: docker/setup-qemu-action@v2
+      - name: Install Docker Compose (manually)
+        run: |
+          sudo apt-get update
+          sudo apt-get install docker-compose -y
 
-            - name: Ensure Docker Compose is available
-              run: docker compose version
+      - name: Install dependencies
+        run: npm install
 
-            - name: Copy .env.example to .env
-              run: cp ./.env.example ./.env
-            
-            - name: Make integration script executable
-              run: chmod +x ./scripts/*
+      - name: Copy .env.example to .env
+        run: cp ./.env.example ./.env
 
-            - name: Run integration script
-              run: npm run test:integration
-             
+      - name: Make integration script executable
+        run: chmod +x ./scripts/run-integration.sh
 
-
+      - name: Run integration tests
+        run: npm run test:integration
